--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -5,6 +5,7 @@
  */
 
 /* You can override the default Infima variables here. */
+
 :root {
   --ifm-color-primary: #2e8555;
   --ifm-color-primary-dark: #29784c;
@@ -35,4 +36,18 @@
 
 [data-theme="dark"] .shiki.light-plus {
   display: none;
+}
+
+article {
+  max-width: 700px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+h1 { font-size: 2.5rem !important; }
+
+/* h6 is used for entries in the reference list. */
+h6 {
+  font-size: 1rem !important;
+  font-weight: 400 !important;
 }
